--- a/testBasicOCR.cbp
+++ b/testBasicOCR.cbp
@@ -11,6 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="./OCR/ ./sampleUppercase.pbm" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="`pkg-config opencv --cflags`" />
